update readme and pynb

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <h1 style=\"text-align:center; font-family: Vazir, Tahoma, serif; font-size:14pt;\">\n",
+    "    <h1 style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
     "        ارزیابی راه‌کار؛ شاخص کلیدی عملکرد\n",
     "    </h1>\n",
-    "    <p style=\"text-align:center; font-family: Vazir, Tahoma, serif; font-size:11pt;\">\n",
+    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
     "        تعریف شاخص‌های کلیدی عملکرد برای شرکت چارگون\n",
     "    <br>\n",
     "        تدوین: مصطفی کریمی\n",
