create table for description of copmany

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -30,7 +30,52 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div align=\"center\">\n",
+    "  <table style=\"width:30%; border:3px solid black; text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "    <tr>\n",
+    "      <th>تیم</th>\n",
+    "      <th>ردیف</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>پیشتیبانی نرم‌افزار</td>\n",
+    "      <td>۱</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td>استقرار نرم‌افزار</td>\n",
+    "      <td>۲</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> دفتر مدیریت پروژه </td>\n",
+    "      <td> ۳ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> وصول مطالبات </td>\n",
+    "      <td> ۴ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> واحد فناوری اطلاعات </td>\n",
+    "      <td> ۵ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> فروش </td>\n",
+    "      <td> ۶ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> بازاریابی </td>\n",
+    "      <td> ۷ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> مدیرعامل </td>\n",
+    "      <td> ۸ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "      <td> هیات مدیره </td>\n",
+    "      <td> ۹ </td>\n",
+    "    </tr>\n",
+    "  </table>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
