Definition of the question

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -31,6 +31,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div>\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
+    "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
+    "    </h2>\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "        این شرکت دارای ۹ دپارتمان مختلف است که متشکل از تیم یا فرد داخل آن است.\n",
+    "    <br>\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div align=\"center\">\n",
     "  <table style=\"width:30%; border:3px solid black; text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
     "    <tr>\n",
