wright about KPIs

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div>\n",
+    "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
     "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
     "    </h2>\n",
@@ -90,6 +90,33 @@
     "      <td> ۹ </td>\n",
     "    </tr>\n",
     "  </table>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
+    "        اندازه‌گیری عملکرد راهکار\n",
+    "    </h2></div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "        <b>هدف:</b> تعیین کردن معیارهای عملکرد و استفاده از داده‌های جمع‌آوری شده برای ارزیابی اثربخشی یک راهکار در رابطه با ارزش ارایه شده.\n",
+    "    <br>\n",
+    "    معیارهای عملکرد، ارزش یک راهکار تازه ایجاد شده و یا موجود را تعیین می‌کند. عملکرد مورد استفاده بستگی به خود راهکار، زمینه و چگونگی تعریف ارزش سازمان دارد. هنگامی‌که راهکارها دارای عملکرد داخلی نیستند، تحلیلگر کسب‌و‌کار با ذی‌نفعان همکاری می‌کند تا معیارهایی را تعیین کند که به بهترین وجه منعکس‌کننده عملکرد یک راهکار باشد. هملکرد ممکن است از طریق شاخص عملکرد (KPI) همچون میزان سرمایه‌گذاری، و اهداف سازمان برای یک پروژه، اهداف عملکرد فرایند یا تست‌های یک نرم‌افزار ارزیابی شود.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "        <b>معیارهای کمی:</b> عددی، قابل شمارش یا محدود هستند که معمولا شامل مقادیر، کمیت‌ها یا نرخ‌ها هستند\n",
+    "    <br>\n",
+    "        <b>معیارهای کمی:</b> ذهنی هستند و می‌توانند شامل نگرش، ادراک و هرگونه پاسخ ذهنی دیگر باشند. مشتریان، کاربران و سایر افراد درگیر در بهره‌برداری از یک راهکار، از این مسئله آگاهی دارند که چگونه راهکار نیازمندی را برآورده می‌کند.\n",
+    "    </p>\n",
     "</div>"
    ]
   }
