--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -6,22 +6,23 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <h1 style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
+    "    <h1 style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight: 900;\">\n",
     "        ارزیابی راه‌کار؛ شاخص کلیدی عملکرد\n",
     "    </h1>\n",
-    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
-    "        تعریف شاخص‌های کلیدی عملکرد برای شرکت چارگون\n",
+    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
+    "        <span style=\"font-weight:700;\">تعریف شاخص‌های کلیدی عملکرد برای شرکت چارگون </span>\n",
     "    <br>\n",
-    "        تدوین: مصطفی کریمی\n",
+    "        <span style=\"font-weight:700;\"> تدوین:</span> مصطفی کریمی\n",
     "    <br>\n",
-    "        کنترل: مهدی عامری\n",
+    "        <span style=\"font-weight:700;\">کنترل:</span> مهدی عامری\n",
     "    <br>\n",
-    "        نسخه اول - ویرایش اول - تاریخ ۱۴۰۲/۰۴/۰۳    \n",
+    "        <span style=\"color: #646464;\">نسخه اول - ویرایش اول - تاریخ ۱۴۰۲/۰۴/۰۳ </span>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
     "\n",
-    "<p align=\"center\">\n",
+    "\n",
+    "<p style=\"text-align:center;\">\n",
     "    <a href=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e\"><img src=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e.svg\" alt=\"wakatime\"></a>\n",
     "</p>"
    ]
@@ -32,7 +33,7 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\">\n",
-    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
     "    </h2>\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
@@ -99,24 +100,101 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\">\n",
-    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt;\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "        اندازه‌گیری عملکرد راهکار\n",
     "    </h2></div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
     "        <b>هدف:</b> تعیین کردن معیارهای عملکرد و استفاده از داده‌های جمع‌آوری شده برای ارزیابی اثربخشی یک راهکار در رابطه با ارزش ارایه شده.\n",
     "    <br>\n",
-    "    معیارهای عملکرد، ارزش یک راهکار تازه ایجاد شده و یا موجود را تعیین می‌کند. عملکرد مورد استفاده بستگی به خود راهکار، زمینه و چگونگی تعریف ارزش سازمان دارد. هنگامی‌که راهکارها دارای عملکرد داخلی نیستند، تحلیلگر کسب‌و‌کار با ذی‌نفعان همکاری می‌کند تا معیارهایی را تعیین کند که به بهترین وجه منعکس‌کننده عملکرد یک راهکار باشد. هملکرد ممکن است از طریق شاخص عملکرد (KPI) همچون میزان سرمایه‌گذاری، و اهداف سازمان برای یک پروژه، اهداف عملکرد فرایند یا تست‌های یک نرم‌افزار ارزیابی شود.\n",
+    "    <li style=\"color: #656565\">\n",
+    "    معیارهای عملکرد، ارزش یک راهکار تازه ایجاد شده و یا موجود را تعیین می‌کند. عملکرد مورد استفاده بستگی به خود راهکار، زمینه و چگونگی تعریف ارزش سازمان دارد. هنگامی‌که راهکارها دارای عملکرد داخلی نیستند، تحلیلگر کسب‌و‌کار با ذی‌نفعان همکاری می‌کند تا معیارهایی را تعیین کند که به بهترین وجه منعکس‌کننده عملکرد یک راهکار باشد. عملکرد ممکن است از طریق شاخص عملکرد (KPI) همچون میزان سرمایه‌گذاری، و اهداف سازمان برای یک پروژه، اهداف عملکرد فرایند یا تست‌های یک نرم‌افزار ارزیابی شود.\n",
+    "    </li>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
-    "        <b>معیارهای کمی:</b> عددی، قابل شمارش یا محدود هستند که معمولا شامل مقادیر، کمیت‌ها یا نرخ‌ها هستند\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
+    "        <span style=\"font-weight:700;\">معیارهای کمی:</span>\n",
+    "        <span style=\"color: #656565\"> عددی، قابل شمارش یا محدود هستند که معمولا شامل مقادیر، کمیت‌ها یا نرخ‌ها هستند </span>\n",
     "    <br>\n",
-    "        <b>معیارهای کمی:</b> ذهنی هستند و می‌توانند شامل نگرش، ادراک و هرگونه پاسخ ذهنی دیگر باشند. مشتریان، کاربران و سایر افراد درگیر در بهره‌برداری از یک راهکار، از این مسئله آگاهی دارند که چگونه راهکار نیازمندی را برآورده می‌کند.\n",
+    "        <span style=\"font-weight:700;\">معیارهای کمی:</span>\n",
+    "        <span style=\"color: #656565\"> ذهنی هستند و می‌توانند شامل نگرش، ادراک و هرگونه پاسخ ذهنی دیگر باشند. مشتریان، کاربران و سایر افراد درگیر در بهره‌برداری از یک راهکار، از این مسئله آگاهی دارند که چگونه راهکار نیازمندی را برآورده می‌کند. </span>\n",
     "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
+    "        در نظر گرفتن ۳ مورد در هنگام جمع‌آوری ارزش عملکردی مهم است؛\n",
+    "    <br>    \n",
+    "        <span style=\"font-weight:700;\">حجم یا اندازه نمونه:</span>\n",
+    "        <span style=\"color: #656565\"> یک حجم یا اندازه نمونه مناسب برای این طرح انتخاب می‌شود. اندازه نمونه‌ای که خیلی کم باشد می‌تواند نتایج را کم‌رنگ کند و منجر به نتیجه‌گیری نادرست شود. اندازه نمونه‌های بزرگتر ممکن است مطلوب‌تر باشد اما ممکن است عملی نباشد.\n",
+    "    </span>\n",
+    "    <br>\n",
+    "        <span style=\"font-weight:700;\">تناوب و زمان‌بندی:</span>\n",
+    "        <span style=\"color: #656565\"> تناوب و زمان سنجش ممکن است نتیجه را تحت تاثیر قرار دهد.\n",
+    "    </span>\n",
+    "    <br>\n",
+    "        <span style=\"font-weight:700;\">حال حاضر:</span>\n",
+    "        <span style=\"color: #656565\"> اندازه‌گیری‌هایی که اخیرا انجام شده است اطلاعات بیشتری از داده‌های قدیمی نمایان می‌کند.\n",
+    "    </span>\n",
+    "    <br>\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "        وظایف اندازه‌گیری‌های عملکرد    \n",
+    "    <br></h2></div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; font-weight:700; line-height: 2;\">\n",
+    "        <b>وظیفه ۱: اندازه‌گیری عملکرد راهکار</b>\n",
+    "    <br>\n",
+    "\n",
+    "<div align=\"center\">\n",
+    "  <table style=\"width:70%; border:3px solid black; text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
+    "    <tr>\n",
+    "        <th> ورودی </th>\n",
+    "        <th> عناصر </th>\n",
+    "        <th> دستورالعمل‌ها و ابزار </th>\n",
+    "        <th> خروجی‌ها </th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> \n",
+    "            <li> اهداف کسب و کار </li> \n",
+    "            <li> راهکار اجرا شده (بیرونی) </li> \n",
+    "        </td>\n",
+    "        <td> \n",
+    "            <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
+    "            <li> اعتبارسنجی معیارهای عملکرد </li>\n",
+    "            <li> جمع‌آوری معیارهای عملکرد </li> \n",
+    "        </td>\n",
+    "        <td> \n",
+    "            <li> تغییر استراتژی </li>\n",
+    "            <li> توصیف وضعیت آینده </li>\n",
+    "            <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
+    "            <li> حوزه راهکار </li>\n",
+    "        </td>\n",
+    "        <td> \n",
+    "            <li> معیارهای عملکرد راهکار </li> \n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    \n",
+    "  </table>\n",
     "</div>"
    ]
   }
