--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -9,7 +9,7 @@
     "    <h1 style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight: 900;\">\n",
     "        ارزیابی راه‌کار؛ شاخص کلیدی عملکرد\n",
     "    </h1>\n",
-    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
+    "    <p style=\"text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
     "        <span style=\"font-weight:700;\">تعریف شاخص‌های کلیدی عملکرد برای شرکت چارگون </span>\n",
     "    <br>\n",
     "        <span style=\"font-weight:700;\"> تدوین:</span> مصطفی کریمی\n",
@@ -36,7 +36,7 @@
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
     "    </h2>\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt;\">\n",
     "        این شرکت دارای ۹ دپارتمان مختلف است که متشکل از تیم یا فرد داخل آن است.\n",
     "    <br>\n",
     "    </p>\n",
@@ -105,21 +105,21 @@
     "    </h2></div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
     "        <b>هدف:</b> تعیین کردن معیارهای عملکرد و استفاده از داده‌های جمع‌آوری شده برای ارزیابی اثربخشی یک راهکار در رابطه با ارزش ارایه شده.\n",
     "    <br>\n",
-    "    <li style=\"color: #656565\">\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565\">\n",
     "    معیارهای عملکرد، ارزش یک راهکار تازه ایجاد شده و یا موجود را تعیین می‌کند. عملکرد مورد استفاده بستگی به خود راهکار، زمینه و چگونگی تعریف ارزش سازمان دارد. هنگامی‌که راهکارها دارای عملکرد داخلی نیستند، تحلیلگر کسب‌و‌کار با ذی‌نفعان همکاری می‌کند تا معیارهایی را تعیین کند که به بهترین وجه منعکس‌کننده عملکرد یک راهکار باشد. عملکرد ممکن است از طریق شاخص عملکرد (KPI) همچون میزان سرمایه‌گذاری، و اهداف سازمان برای یک پروژه، اهداف عملکرد فرایند یا تست‌های یک نرم‌افزار ارزیابی شود.\n",
     "    </li>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2;\">\n",
-    "        <span style=\"font-weight:700;\">معیارهای کمی:</span>\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <span style=\"font-weight:700; font-size:11pt;\">معیارهای کمی:</span>\n",
     "        <span style=\"color: #656565\"> عددی، قابل شمارش یا محدود هستند که معمولا شامل مقادیر، کمیت‌ها یا نرخ‌ها هستند </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700;\">معیارهای کمی:</span>\n",
+    "        <span style=\"font-weight:700; font-size:11pt;\">معیارهای کمی:</span>\n",
     "        <span style=\"color: #656565\"> ذهنی هستند و می‌توانند شامل نگرش، ادراک و هرگونه پاسخ ذهنی دیگر باشند. مشتریان، کاربران و سایر افراد درگیر در بهره‌برداری از یک راهکار، از این مسئله آگاهی دارند که چگونه راهکار نیازمندی را برآورده می‌کند. </span>\n",
     "    </p>\n",
     "</div>"
@@ -131,18 +131,18 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height: 2;\">\n",
     "        در نظر گرفتن ۳ مورد در هنگام جمع‌آوری ارزش عملکردی مهم است؛\n",
     "    <br>    \n",
-    "        <span style=\"font-weight:700;\">حجم یا اندازه نمونه:</span>\n",
+    "        <span style=\"font-weight:700; font-size:11pt;\">حجم یا اندازه نمونه:</span>\n",
     "        <span style=\"color: #656565\"> یک حجم یا اندازه نمونه مناسب برای این طرح انتخاب می‌شود. اندازه نمونه‌ای که خیلی کم باشد می‌تواند نتایج را کم‌رنگ کند و منجر به نتیجه‌گیری نادرست شود. اندازه نمونه‌های بزرگتر ممکن است مطلوب‌تر باشد اما ممکن است عملی نباشد.\n",
     "    </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700;\">تناوب و زمان‌بندی:</span>\n",
+    "        <span style=\"font-weight:700; font-size:11pt;\">تناوب و زمان‌بندی:</span>\n",
     "        <span style=\"color: #656565\"> تناوب و زمان سنجش ممکن است نتیجه را تحت تاثیر قرار دهد.\n",
     "    </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700;\">حال حاضر:</span>\n",
+    "        <span style=\"font-weight:700; font-size:11pt;\">حال حاضر:</span>\n",
     "        <span style=\"color: #656565\"> اندازه‌گیری‌هایی که اخیرا انجام شده است اطلاعات بیشتری از داده‌های قدیمی نمایان می‌کند.\n",
     "    </span>\n",
     "    <br>\n",
@@ -161,7 +161,7 @@
     "    <br></h2></div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; font-weight:700; line-height: 2;\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2;\">\n",
     "        <b>وظیفه ۱: اندازه‌گیری عملکرد راهکار</b>\n",
     "    <br>\n",
     "\n",
