--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -16,7 +16,7 @@
     "    <br>\n",
     "        <span style=\"font-weight:700;\">کنترل:</span> مهدی عامری\n",
     "    <br>\n",
-    "        <span style=\"color: #646464;\">نسخه اول - ویرایش اول - تاریخ ۱۴۰۲/۰۴/۰۳ </span>\n",
+    "        <span style=\"color: #646464; font-size:11pt;\">نسخه اول - ویرایش اول - تاریخ ۱۴۰۲/۰۴/۰۳ </span>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
