update table bug

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -166,14 +166,14 @@
     "    <br>\n",
     "\n",
     "<div align=\"center\">\n",
-    "  <table style=\"width:70%; border:3px solid black; text-align:center; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
-    "    <tr>\n",
+    "  <table style=\"width:70%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
+    "    <tr style=\"text-align:center;\">\n",
     "        <th> ورودی </th>\n",
     "        <th> عناصر </th>\n",
     "        <th> دستورالعمل‌ها و ابزار </th>\n",
     "        <th> خروجی‌ها </th>\n",
     "    </tr>\n",
-    "    <tr>\n",
+    "    <tr style=\"text-align:right;\">\n",
     "        <td> \n",
     "            <li> اهداف کسب و کار </li> \n",
     "            <li> راهکار اجرا شده (بیرونی) </li> \n",
