--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -166,7 +166,7 @@
     "    <br>\n",
     "\n",
     "<div align=\"center\">\n",
-    "  <table style=\"width:70%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
+    "  <table style=\"width:100%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
     "    <tr style=\"text-align:center;\">\n",
     "        <th> ورودی </th>\n",
     "        <th> عناصر </th>\n",
@@ -174,22 +174,22 @@
     "        <th> خروجی‌ها </th>\n",
     "    </tr>\n",
     "    <tr style=\"text-align:right;\">\n",
-    "        <td> \n",
+    "        <td style=\"padding-right:20px;\"> \n",
     "            <li> اهداف کسب و کار </li> \n",
     "            <li> راهکار اجرا شده (بیرونی) </li> \n",
     "        </td>\n",
-    "        <td> \n",
+    "        <td style=\"padding-right:20px;\"> \n",
     "            <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
     "            <li> اعتبارسنجی معیارهای عملکرد </li>\n",
     "            <li> جمع‌آوری معیارهای عملکرد </li> \n",
-    "        </td>\n",
-    "        <td> \n",
+    "        </td >\n",
+    "        <td style=\"padding-right:20px;\"> \n",
     "            <li> تغییر استراتژی </li>\n",
     "            <li> توصیف وضعیت آینده </li>\n",
     "            <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
     "            <li> حوزه راهکار </li>\n",
     "        </td>\n",
-    "        <td> \n",
+    "        <td style=\"padding-right:20px;\"> \n",
     "            <li> معیارهای عملکرد راهکار </li> \n",
     "        </td>\n",
     "    </tr>\n",
