update and fix bug

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -37,7 +37,7 @@
     "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
     "    </h2>\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt;\">\n",
-    "        این شرکت دارای ۹ دپارتمان مختلف است که متشکل از تیم یا فرد داخل آن است.\n",
+    "        این شرکت شامل ۹ تیم که هر تیم ممکن است بین ۱ تا چند نفر نیرو باشد.\n",
     "    <br>\n",
     "    </p>\n",
     "</div>"
@@ -108,18 +108,18 @@
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
     "        <b>هدف:</b> تعیین کردن معیارهای عملکرد و استفاده از داده‌های جمع‌آوری شده برای ارزیابی اثربخشی یک راهکار در رابطه با ارزش ارایه شده.\n",
     "    <br>\n",
-    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565\">\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
     "    معیارهای عملکرد، ارزش یک راهکار تازه ایجاد شده و یا موجود را تعیین می‌کند. عملکرد مورد استفاده بستگی به خود راهکار، زمینه و چگونگی تعریف ارزش سازمان دارد. هنگامی‌که راهکارها دارای عملکرد داخلی نیستند، تحلیلگر کسب‌و‌کار با ذی‌نفعان همکاری می‌کند تا معیارهایی را تعیین کند که به بهترین وجه منعکس‌کننده عملکرد یک راهکار باشد. عملکرد ممکن است از طریق شاخص عملکرد (KPI) همچون میزان سرمایه‌گذاری، و اهداف سازمان برای یک پروژه، اهداف عملکرد فرایند یا تست‌های یک نرم‌افزار ارزیابی شود.\n",
     "    </li>\n",
     "    </p>\n",
     "</div>\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
-    "        <span style=\"font-weight:700; font-size:11pt;\">معیارهای کمی:</span>\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; padding-right:10px;\">\n",
+    "        <span style=\"font-weight:700;\">معیارهای کمی:</span>\n",
     "        <span style=\"color: #656565\"> عددی، قابل شمارش یا محدود هستند که معمولا شامل مقادیر، کمیت‌ها یا نرخ‌ها هستند </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700; font-size:11pt;\">معیارهای کمی:</span>\n",
+    "        <span style=\"font-weight:700;\">معیارهای کیفی:</span>\n",
     "        <span style=\"color: #656565\"> ذهنی هستند و می‌توانند شامل نگرش، ادراک و هرگونه پاسخ ذهنی دیگر باشند. مشتریان، کاربران و سایر افراد درگیر در بهره‌برداری از یک راهکار، از این مسئله آگاهی دارند که چگونه راهکار نیازمندی را برآورده می‌کند. </span>\n",
     "    </p>\n",
     "</div>"
@@ -134,16 +134,16 @@
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height: 2;\">\n",
     "        در نظر گرفتن ۳ مورد در هنگام جمع‌آوری ارزش عملکردی مهم است؛\n",
     "    <br>    \n",
-    "        <span style=\"font-weight:700; font-size:11pt;\">حجم یا اندازه نمونه:</span>\n",
-    "        <span style=\"color: #656565\"> یک حجم یا اندازه نمونه مناسب برای این طرح انتخاب می‌شود. اندازه نمونه‌ای که خیلی کم باشد می‌تواند نتایج را کم‌رنگ کند و منجر به نتیجه‌گیری نادرست شود. اندازه نمونه‌های بزرگتر ممکن است مطلوب‌تر باشد اما ممکن است عملی نباشد.\n",
+    "        <span style=\"font-weight:700; font-size:11pt; padding-right:10px;\">حجم یا اندازه نمونه:</span>\n",
+    "        <span style=\"color: #656565; font-size:11pt;\"> یک حجم یا اندازه نمونه مناسب برای این طرح انتخاب می‌شود. اندازه نمونه‌ای که خیلی کم باشد می‌تواند نتایج را کم‌رنگ کند و منجر به نتیجه‌گیری نادرست شود. اندازه نمونه‌های بزرگتر ممکن است مطلوب‌تر باشد اما ممکن است عملی نباشد.\n",
     "    </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700; font-size:11pt;\">تناوب و زمان‌بندی:</span>\n",
-    "        <span style=\"color: #656565\"> تناوب و زمان سنجش ممکن است نتیجه را تحت تاثیر قرار دهد.\n",
+    "        <span style=\"font-weight:700; font-size:11pt; padding-right:10px;\">تناوب و زمان‌بندی:</span>\n",
+    "        <span style=\"color: #656565; font-size:11pt;\"> تناوب و زمان سنجش ممکن است نتیجه را تحت تاثیر قرار دهد.\n",
     "    </span>\n",
     "    <br>\n",
-    "        <span style=\"font-weight:700; font-size:11pt;\">حال حاضر:</span>\n",
-    "        <span style=\"color: #656565\"> اندازه‌گیری‌هایی که اخیرا انجام شده است اطلاعات بیشتری از داده‌های قدیمی نمایان می‌کند.\n",
+    "        <span style=\"font-weight:700; font-size:11pt; padding-right:10px;\">حال حاضر:</span>\n",
+    "        <span style=\"color: #656565; font-size:11pt;\"> اندازه‌گیری‌هایی که اخیرا انجام شده است اطلاعات بیشتری از داده‌های قدیمی نمایان می‌کند.\n",
     "    </span>\n",
     "    <br>\n",
     "    </p>\n",
@@ -158,38 +158,42 @@
     "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
     "        وظایف اندازه‌گیری‌های عملکرد    \n",
-    "    <br></h2></div>\n",
+    "    <br></h2>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "<div dir=\"rtl\">\n",
-    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2;\">\n",
-    "        <b>وظیفه ۱: اندازه‌گیری عملکرد راهکار</b>\n",
-    "    <br>\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
+    "       وظیفه ۱: اندازه‌گیری عملکرد راهکار\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "<div align=\"center\">\n",
-    "  <table style=\"width:100%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height: 2;\">\n",
-    "    <tr style=\"text-align:center;\">\n",
+    "  <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "    <tr style=\"text-align:center; line-height: 2;\">\n",
     "        <th> ورودی </th>\n",
     "        <th> عناصر </th>\n",
     "        <th> دستورالعمل‌ها و ابزار </th>\n",
     "        <th> خروجی‌ها </th>\n",
     "    </tr>\n",
-    "    <tr style=\"text-align:right;\">\n",
-    "        <td style=\"padding-right:20px;\"> \n",
+    "    <tr style=\"line-height: 2; text-align:right;\">\n",
+    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
     "            <li> اهداف کسب و کار </li> \n",
     "            <li> راهکار اجرا شده (بیرونی) </li> \n",
     "        </td>\n",
-    "        <td style=\"padding-right:20px;\"> \n",
+    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
     "            <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
     "            <li> اعتبارسنجی معیارهای عملکرد </li>\n",
     "            <li> جمع‌آوری معیارهای عملکرد </li> \n",
     "        </td >\n",
-    "        <td style=\"padding-right:20px;\"> \n",
+    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
     "            <li> تغییر استراتژی </li>\n",
     "            <li> توصیف وضعیت آینده </li>\n",
     "            <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
     "            <li> حوزه راهکار </li>\n",
     "        </td>\n",
-    "        <td style=\"padding-right:20px;\"> \n",
+    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
     "            <li> معیارهای عملکرد راهکار </li> \n",
     "        </td>\n",
     "    </tr>\n",
