fix rtl format for table

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -37,7 +37,7 @@
     "        تعریف بخش‌های مختلف دپارتمان‌های شرکت نرم‌افزاری\n",
     "    </h2>\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt;\">\n",
-    "        این شرکت شامل ۹ تیم که هر تیم ممکن است بین ۱ تا چند نفر نیرو باشد.\n",
+    "        این شرکت شامل ۹ تیم که هر تیم ممکن است بین ۱ تا چند نفر نیرو داشته باشد.\n",
     "    <br>\n",
     "    </p>\n",
     "</div>"
@@ -168,37 +168,37 @@
     "    </p>\n",
     "</div>\n",
     "\n",
-    "\n",
-    "<div align=\"center\">\n",
-    "  <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
-    "    <tr style=\"text-align:center; line-height: 2;\">\n",
-    "        <th> ورودی </th>\n",
-    "        <th> عناصر </th>\n",
-    "        <th> دستورالعمل‌ها و ابزار </th>\n",
-    "        <th> خروجی‌ها </th>\n",
-    "    </tr>\n",
-    "    <tr style=\"line-height: 2; text-align:right;\">\n",
-    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
-    "            <li> اهداف کسب و کار </li> \n",
-    "            <li> راهکار اجرا شده (بیرونی) </li> \n",
-    "        </td>\n",
-    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
-    "            <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
-    "            <li> اعتبارسنجی معیارهای عملکرد </li>\n",
-    "            <li> جمع‌آوری معیارهای عملکرد </li> \n",
-    "        </td >\n",
-    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
-    "            <li> تغییر استراتژی </li>\n",
-    "            <li> توصیف وضعیت آینده </li>\n",
-    "            <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
-    "            <li> حوزه راهکار </li>\n",
-    "        </td>\n",
-    "        <td style=\"padding-right:20px; text-align:right;\"> \n",
-    "            <li> معیارهای عملکرد راهکار </li> \n",
-    "        </td>\n",
-    "    </tr>\n",
-    "    \n",
-    "  </table>\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> عناصر </th>\n",
+    "                <th> دستورالعمل‌ها و ابزار </th>\n",
+    "                <th> خروجی‌ها </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> اهداف کسب و کار </li> \n",
+    "                    <li> راهکار اجرا شده (بیرونی) </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
+    "                    <li> اعتبارسنجی معیارهای عملکرد </li>\n",
+    "                    <li> جمع‌آوری معیارهای عملکرد </li> \n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تغییر استراتژی </li>\n",
+    "                    <li> توصیف وضعیت آینده </li>\n",
+    "                    <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
+    "                    <li> حوزه راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> معیارهای عملکرد راهکار </li> \n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
     "</div>"
    ]
   }
