add dashboard badge

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "\n",
     "<p style=\"text-align:center;\">\n",
-    "    <a href=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e\"><img src=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e.svg\" alt=\"wakatime\"></a>\n",
+    "    <a href=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e\" target=\"_blank\"><img src=\"https://wakatime.com/badge/user/77c38c6e-61da-47be-8032-3396542aff6d/project/9d7b8c7d-6848-4ddc-a51c-c1fba9e5160e.svg\" alt=\"wakatime\"></a> &nbsp;\n",
+    "    <a href=\"https://wakatime.com/@mkarimi21/projects/icxncnrgsb\"><img src=\"https://badgen.net/static/Repo/Dashboard/red?icon=graphql&label/\" alt=\"wakatim_dashboard\" target=\"_blank\"></a>\n",
     "</p>"
    ]
   },
@@ -201,6 +202,12 @@
     "    </div>\n",
     "</div>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
