add task 2 for kpi tasks

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -102,9 +102,63 @@
    "source": [
     "<div dir=\"rtl\">\n",
     "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
-    "        اندازه‌گیری عملکرد راهکار\n",
-    "    </h2></div>\n",
+    "        حوزه دانشی ارزیابی راهکار\n",
+    "    </h2>\n",
+    "</div>\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
+    "       وظیفه ۱: اندازه‌گیری عملکرد راهکار\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> عناصر </th>\n",
+    "                <th> دستورالعمل‌ها و ابزار </th>\n",
+    "                <th> خروجی‌ها </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> اهداف کسب و کار </li> \n",
+    "                    <li> راهکار اجرا شده (بیرونی) </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
+    "                    <li> اعتبارسنجی معیارهای عملکرد </li>\n",
+    "                    <li> جمع‌آوری معیارهای عملکرد </li> \n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تغییر استراتژی </li>\n",
+    "                    <li> توصیف وضعیت آینده </li>\n",
+    "                    <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
+    "                    <li> حوزه راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> معیارهای عملکرد راهکار </li> \n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
     "        <b>هدف:</b> تعیین کردن معیارهای عملکرد و استفاده از داده‌های جمع‌آوری شده برای ارزیابی اثربخشی یک راهکار در رابطه با ارزش ارایه شده.\n",
@@ -156,16 +210,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div dir=\"rtl\">\n",
-    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
-    "        وظایف اندازه‌گیری‌های عملکرد    \n",
-    "    <br></h2>\n",
-    "</div>\n",
-    "\n",
     "\n",
     "<div dir=\"rtl\">\n",
     "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
-    "       وظیفه ۱: اندازه‌گیری عملکرد راهکار\n",
+    "        وظیفه ۲: تحلیل معیارهای عملکرد\n",
     "    </p>\n",
     "</div>\n",
     "\n",
@@ -180,22 +228,23 @@
     "            </tr>\n",
     "            <tr>\n",
     "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
-    "                    <li> اهداف کسب و کار </li> \n",
-    "                    <li> راهکار اجرا شده (بیرونی) </li> \n",
+    "                    <li> ارزش بالقوه </li> \n",
+    "                    <li> ارزیابی عملکرد معیارها </li> \n",
     "                </td>\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> تعریف کردن معیارهای عملکرد راهکار </li>\n",
-    "                    <li> اعتبارسنجی معیارهای عملکرد </li>\n",
-    "                    <li> جمع‌آوری معیارهای عملکرد </li> \n",
+    "                    <li> عملکرد راهکار در برابر ارزش مطلوب </li>\n",
+    "                    <li> ریسک‌ها </li>\n",
+    "                    <li> گرایش‌ها </li> \n",
+    "                    <li> دقت متغیرهای عملکردها </li> \n",
     "                </td >\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> تغییر استراتژی </li>\n",
+    "                    <li> استراتژی تغییر </li>\n",
     "                    <li> توصیف وضعیت آینده </li>\n",
-    "                    <li> نیازمندی‌ها (اعتبارسنجی شده) </li>\n",
-    "                    <li> حوزه راهکار </li>\n",
+    "                    <li> نتایج تحلیل ریسک </li>\n",
+    "                    <li> دامنه راهکار </li>\n",
     "                </td>\n",
     "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
-    "                    <li> معیارهای عملکرد راهکار </li> \n",
+    "                    <li> تحلیل کارایی راهکار </li> \n",
     "                </td>\n",
     "            </tr>\n",
     "        </table>\n",
@@ -207,7 +256,25 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> ارایه بینش درمورد عملکرد یک راهکار در رابطه با ارزش ارایه شده\n",
+    "    <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    اندازه‌گیری کارایی تخمین زده شده در اندازه‌گیری عملکرد راهکار غالبا نیازمندی به تفسیر و ترکیب برای به‌دست‌آوردن معنی و کاربردی بودن، دارد.\n",
+    "    <br>\n",
+    "    اندازه‌گیری کارایی خود به‌ندرت تصمیمی درمورد ارزش یک راهکار ارائه می‌کنند.\n",
+    "    </li>\n",
+    "        <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    یک راهکار ممکن است کارایی بالا، مانند یک سیستم پردازش کارآمد معاملات آنلاین داشته باشد، اما ارزش کمتری را نسبت به آنچه انتظار می‌رود داشته باشد (درمقایسه با آنچه در گذشته کمک کرده است) کمک کند. از طرف دیگر، یک راهکار با کارایی کم اما با ارزش بالقوه، مانند یک فرآیند اصلی که ناکارآمد است، می‌تواند افزایش یابد تا سطح کارایی آن افزایش یابد.\n",
+    "    <br>\n",
+    "    برای اینکه نتایج دقیق و قابل اعتماد در نظر گرفته شود، نتایج اندازه‌گیری کارایی باید قابل تکرار باشد.\n",
+    "    </li>\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
   }
  ],
  "metadata": {
