--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -275,6 +275,69 @@
     "    </p>\n",
     "</div>\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
+    "    وظیفه ۳: ارزیابی محدودیت‌های راهکار\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> عناصر </th>\n",
+    "                <th> دستورالعمل‌ها و ابزار </th>\n",
+    "                <th> خروجی‌ها </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> اجرای راهکار (خارجی) </li> \n",
+    "                    <li> تحلیل عملکرد راهکار </li> \n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> شناسایی وابستگی‌های مولقه راهکار داخلی </li>\n",
+    "                    <li> بررسی مشکلات راهکار موثر بر ارزیابی </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تغییر استراتژی </li>\n",
+    "                    <li> نتایج تحلیل ریسک </li>\n",
+    "                    <li> دامنه راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> محدودیت راهکار </li> \n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> برای تعیین عوامل درونی راهکار که تحقق کامل ارزش را محدود می‌کند.\n",
+    "    <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    ارزیابی محدودیت‌های راهکار، دلایل اصلی راهکارهای کم کارآمد و ناکارآمد و مولفه‌های راهکار را مشخص می‌کند.\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    علاوه بر مشکلات شناسایی شده، تحلیلگران کسب‌وکار ریسک‌های ناشی از راهکار و محدودیت‌های احتمالی راهکار را نیز ارزیابی می‌کنند. این ارزیابی ریسک مختص راهکار و محدودیت‌های آن است.\n",
+    "    </li>\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
   }
  ],
  "metadata": {
