--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -338,6 +338,96 @@
     "    </p>\n",
     "</div>\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
+    "        وظیفه ۴: ارزیابی محدودیت‌های سازمانی\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> عناصر </th>\n",
+    "                <th> دستورالعمل‌ها و ابزار </th>\n",
+    "                <th> خروجی‌ها </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> راهکار پیاده‌سازی شده یا ساخته شده (بیرونی) </li> \n",
+    "                    <li> توضیح وضعیت فعلی </li>\n",
+    "                    <li> تجزیه‌و‌تحلیل عملکرد راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> ارزیابی فرهنگ سازمانی </li>\n",
+    "                    <li> تجزیه‌وتحلیل تاثیر ذی‌نفعان </li>\n",
+    "                    <li> تغییرات ساختار سازمانی </li>\n",
+    "                    <li> ارزیابی عملیاتی </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> اهداف کسب‌وکار </li>\n",
+    "                    <li> تغییرات استراتژی </li>\n",
+    "                    <li> توصیف وضغیت آینده </li>\n",
+    "                    <li> نتایج تحلیل ریسک </li>\n",
+    "                    <li> دامنه راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> محدودیت سازمانی </li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> تعیین چگونگی محدود شدن تحقق ارزش توسط عوامل بیرونی راهکار.\n",
+    "    <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    راهکارها ممکن است در سازمان‌های مختلف درون‌سازمانی کار کنند. بنابراین تعامل و وابستگی‌های زیادی دارند. راهکارها همچنین ممکن است به عوامل محیطی وابسته باشد که برای سازمان خارجی است. محدودیت‌های سازمانی می‌تواند شامل عواملی مانند فرهنگُ، عملیات، اجزای فنی، منافع ذی‌نفعان یا ساختارهای گزارش‌دهی باشد.\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    تحلیلگران کسب‌وکار ارزیابی‌های فرهنگی را انجام می‌دهند تا:\n",
+    "    <br>\n",
+    "    <span style=\"padding-right:20px;\"> شناسایی کردن اینکه آیا ذی‌نفعان دلایل وجود راهکار را درک ‌می‌کنند یا خیر </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> مشخص کنند که آیا ذی‌نفعان راهکار را به‌عنوان چیزی سودمند می‌دانند و طرفدار این تغییر هستند </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> تعیین کردن اینکه چه تغییرات فرهنگی برای درک بهتر ارزش از راهکار نیاز است. </span>\n",
+    "    <br>\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    تحلیلگران کسب‌وکار نیز ذی‌نفعان داخلی و خارجی را ارزیابی می‌کنند تا:\n",
+    "    <br>\n",
+    "    <span style=\"padding-right:20px;\"></span> درک و پذیرش راهکار آزمایش کنند، <br>\n",
+    "    <span style=\"padding-right:20px;\"></span> میزان ارزش و سود حاصل از راهکار را بسنجند <br>\n",
+    "    <span style=\"padding-right:20px;\"></span> فعالیت‌های ارتباطی موردنیاز برای اطمینان از آگاهی و درک راهکار را تعیین کنند. <br>\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    هنگام انجام ارزیابی عملیاتی، تحلیلگران کسب‌وکار موارد زیر را در نظر می‌گیرند:\n",
+    "    <br>\n",
+    "    <span style=\"padding-right:20px;\"> سیاست‌ها و رویه‌ها </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> قابلیت‌ها و فرآیندهای فراهم‌کننده دیگر قابلیت‌ها </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> مهارت‌ها و نیازهای آموزشی </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> شیوه‌های منابع انسانی </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> تحمل ریسک و رویکردهای مدیریتی </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> ابزارها و فناوری‌های که از راهکار پشتیبانی می‌کنند. </span>\n",
+    "    </li>\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
   }
  ],
  "metadata": {
