last task for kpi

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -428,6 +428,79 @@
     "    </p>\n",
     "</div>\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; font-weight:700; line-height: 2; padding-right:10px;\">\n",
+    "        وظیفه ۵: اقدامات پیشنهادی جهت افزایش ارزش راهکار\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div dir=\"rtl\">\n",
+    "    <div align=\"center\">\n",
+    "        <table style=\"width:90%; border:3px solid black; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt;\">\n",
+    "            <tr style=\"text-align:center; line-height: 2;\">\n",
+    "                <th> ورودی </th>\n",
+    "                <th> عناصر </th>\n",
+    "                <th> دستورالعمل‌ها و ابزار </th>\n",
+    "                <th> خروجی‌ها </th>\n",
+    "            </tr>\n",
+    "            <tr>\n",
+    "                <td style=\"text-align:right; padding-right:20px; line-height: 2;\"> \n",
+    "                    <li> محدودیت راهکار </li> \n",
+    "                    <li> محدودیت سازمانی </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> تنظیم معیارهای عملکرد راهکار </li>\n",
+    "                    <li> توصیه‌ها </li>\n",
+    "                </td >\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> اهداف کسب‌وکار </li>\n",
+    "                    <li> شرح وضعیت فعلی </li>\n",
+    "                    <li> دامنه راهکار </li>\n",
+    "                </td>\n",
+    "                <td style=\"padding-right:20px; text-align:right; line-height: 2;\"> \n",
+    "                    <li> اقدامات توصیه شده </li>\n",
+    "                </td>\n",
+    "            </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        <b>هدف:</b> درک کردن عواملی که باعث ایجاد اختلافا بین ارزش بالقوه و ارزش واقعی می‌شوند، و توصیه یک مسیر عملی برای هم راستا کردن آن‌ها.\n",
+    "    <br>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    این کار برای درک اجتماع ارزیابی‌های انجام شده و شناسایی گزینه‌های جایگزین و اقداماتی برای بهبود کارایی راهکار و افزایش تحقق ارزش متمرکز است.\n",
+    "    <br>\n",
+    "    توصیه‌ها عموما چگونگی جایگزینی، کناره‌گیری یا ارتقاء راهکار را مشخص می‌کند.\n",
+    "    </li>\n",
+    "    <li style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:11pt; line-height:2; color: #656565; padding-right:10px;\">\n",
+    "    برخی از نمونه‌های رایج از توصیه‌هایی که یک تحلیلگر کسب‌وکار ممکن است ارائه دهد عبارت‌اند از:\n",
+    "    <br>\n",
+    "    <span style=\"padding-right:20px;\"> عدم انجام کاری </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> تغییر سازمانی: (خودکارسازی یا ساده‌سازی کارهایی که افزاد انجام می‌دهند و بهبود دسترسی به اطلاعات) </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> کاهش پیچیدگی رابط‌ها </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> برطرف نمودن دوباره‌کاری‌ها </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> جلوگیری از اتلاف </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> شناسایی قابلیت‌های اضافی </span><br>\n",
+    "    <span style=\"padding-right:20px;\"> کنارگذاشتن یک راهکار </span><br>\n",
+    "    </li>\n",
+    "    </p>\n",
+    "</div>\n"
+   ]
   }
  ],
  "metadata": {
