add video for kpi

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -501,6 +501,30 @@
     "    </p>\n",
     "</div>\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <p style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:13pt; line-height:2;\">\n",
+    "        توضیح مختصر از ۵ شاخص جهت ارزیابی\n",
+    "    </p>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"center\">\n",
+    "    <iframe width=\"560\" height=\"315\"\n",
+    "    src=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\"\n",
+    "    </iframe>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
