make divider for company teams

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -523,7 +523,121 @@
     "    <iframe width=\"560\" height=\"315\"\n",
     "    src=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\"\n",
     "    </iframe>\n",
+    "</div>\n",
+    "<br>\n",
+    "<div align=\"center\">\n",
+    "    <p style=\"text-align:center;\">\n",
+    "        <a href=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\"><img src=\"https://badgen.net/static/Video/KPIs/red?icon=youtube&label/\" alt=\"KPIs\" target=\"_blank\"></a>\n",
+    "    </p>\n",
     "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "تیم اول؛ پیشتیبانی نرم‌افزار\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم دوم؛ استقرار نرم‌افزار\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم سوم؛ دفتر مدیریت پروژه\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم چهارم؛ وصول مطالبات\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم پنجم؛ واحد فناوری اطلاعات\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم ششم؛ فروش\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم هفتم؛ بازاریابی\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم هشتم؛ مدیر عامل\n",
+    "    </h2>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div dir=\"rtl\">\n",
+    "    <h2 style=\"text-align:right; font-family: Vazirmatn, B Nazanin, Tahoma; font-size:14pt; font-weight:700;\">\n",
+    "    تیم نهم؛ هیات مدیره\n",
+    "    </h2>\n",
+    "</div>\n"
    ]
   }
  ],
