try to fix video bug

--- a/40204/SoftWareCompanyKPIs.ipynb
+++ b/40204/SoftWareCompanyKPIs.ipynb
@@ -520,9 +520,7 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "    <iframe width=\"560\" height=\"315\"\n",
-    "    src=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\"\n",
-    "    </iframe>\n",
+    "    <iframe src=\"https://player.arvancloud.ir/index.html?config=https://karokasb.arvanvod.ir/PGw2R5rLAx/rJzPAEPp1n/origin_config.json\" width=\"560\" height=\"315\"></iframe>\n",
     "</div>\n",
     "<br>\n",
     "<div align=\"center\">\n",
